# bioinfo-platform

./: .dockerignore  .editorconfig  .gitattributes  .gitgnore  .gitignore  .gitnore  .pre-commit-config.yaml  .tmp_bio_ui_python.txt  .tmp_ui_test.txt  .user_preferences.md  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Dockerfile.api  Dockerfile.web  GOAL_PLAN.md  GOAL_PROGRESS.md  GRAPH_EDITOR_SPEC.md  PRODUCT.md  REFACTOR_PLAN.md  bio_ui.spec  build_exe_fixed.bat  cleanup_projects.py  config.py  conftest.py  docker-compose.yml  environment.yml  h2ometa.spec  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  pyproject.toml  requirements.txt  run-app.bat  run-desktop-app.bat  run-web.bat  run.bat  task.md  (+2 more)
.firecrawl/: anvil_arch.json  anvil_workspace.json  anvil_workspaces_detail.md  bio-platform-ui.json  dbdocs-bowtie2.json  dbdocs-bwa.json  dbdocs-centrifuge.json  dbdocs-diamond.json  dbdocs-hisat2.json  dbdocs-humann.json  dbdocs-interproscan.json  dbdocs-kaiju.json  dbdocs-kallisto.json  dbdocs-kraken2.json  dbdocs-metaphlan.json  dbdocs-mmseqs2.json  dbdocs-rgi.json  dbdocs-salmon.json  dbdocs-star.json  file-upload.json  galaxy-data-selection.json  health-probes.json  long-running-api.json  metagenomics-platform-architecture.json  nextflow-tower-params.json  observability.json  qiime-artifact-selection.json  remote-job-ui.json  search-card-rgi-db-validation.json  search-kraken2-db-required-files.json  search-metaphlan-db-validation.json  search-nfcore-taxprofiler-databases.json  search-snakemake-config-schema-validation.json  search-snakemake-db-config.json  sqlite-recovery.json  systemd-service.json  terra_workspaces.md  workspace-assets-search.json  workspace-platform-patterns.json  x-fcoury-2049917871799636201.md
.github/: CODEOWNERS  container-image-scan.target.json  container-runtime-hardening.target.json  dependabot.yml
.pytest_tmp_full/: test_add_sample_updates_home_pcurrent  test_archive_execution_deletescurrent  test_archive_execution_emits_scurrent  test_archive_execution_raises_current  test_continue_analysis_prefillcurrent  (+16 more)
(+1961 files in other folders)
