[project]
name = "bio-ui"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "jinja2>=3.1.0",
    "keyring>=25.0.0",
    "paramiko>=3.0.0",
    "pydantic>=2.10.0",
    "PyYAML>=6.0.2",
    "uvicorn[standard]>=0.34.0",
    "websockets>=12.0",
]

[dependency-groups]
dev = [
    "ruff==0.15.14",
]

[tool.uv]
package = false

[tool.ruff]
target-version = "py312"
src = ["apps", "core", "scripts", "tests"]

[tool.ruff.lint.per-file-ignores]
"apps/remote_runner/pipelines/*/workflow/scripts/*.py" = ["F821"]
