[project]
name = "bio-ui"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "croniter>=6.0.0",
    "fastapi>=0.138.1",
    "jinja2>=3.1.0",
    "keyring>=25.0.0",
    "minio>=7.2.0",
    "paramiko>=5.0.0,<6",
    "pydantic>=2.13.4",
    "PyYAML>=6.0.2",
    "tzdata>=2025.2",
    "uvicorn[standard]>=0.49.0",
    "websockets>=12.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "ruff==0.15.20",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
target-version = "py312"
src = ["apps", "core", "scripts", "tests"]

[tool.ruff.lint.per-file-ignores]
"apps/remote_runner/pipelines/*/workflow/scripts/*.py" = ["F821"]
"apps/remote_runner/snakemake_wrappers/**/wrapper.py" = ["F821"]
